--- a/package.json
+++ b/package.json
@@ -13,6 +13,8 @@
   "dependencies": {
     "axios": "^1.7.7",
     "emailjs-com": "^3.2.0",
+    "three": "^0.134.0",
+    "troisjs": "^0.3.4",
     "vue": "^3.5.10",
     "vue-i18n": "^10.0.4",
     "vue-router": "^4.4.5",
