--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "dependencies": {
     "axios": "^1.7.7",
     "emailjs-com": "^3.2.0",
+    "feather-icons": "^4.29.2",
     "three": "^0.134.0",
     "troisjs": "^0.3.4",
     "vue": "^3.5.10",
+    "vue-feather": "^2.0.0",
     "vue-i18n": "^10.0.4",
     "vue-router": "^4.4.5",
     "vueperslides": "^3.5.1"
