--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "vue": "^3.5.10",
     "vue-i18n": "^10.0.4",
     "vue-router": "^4.4.5",
+    "vue3-google-autocomplete": "^0.0.5",
     "vueperslides": "^3.5.1"
   },
   "devDependencies": {
