--- a/package.json
+++ b/package.json
@@ -6,9 +6,13 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "build:godaddy": "vite build && cp .htaccess dist/.htaccess",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d dist"
+    "predeploy:godaddy": "npm run build:godaddy",
+    "deploy": "gh-pages -d dist",
+    "deploy:godaddy": "npm run predeploy:godaddy && node deploy-to-godaddy.js",
+    "check:env": "node -e \"require('dotenv').config(); const vars=['HOST','USERNAME','PASSWORD']; vars.forEach(v=>{if(!process.env[v]){throw new Error(`${v} is missing in .env`);}}); console.log('All .env variables are set!')\""
   },
   "dependencies": {
     "axios": "^1.7.7",
@@ -22,8 +26,10 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.1.4",
+    "dotenv": "^16.4.5",
     "gh-pages": "^6.1.1",
     "sass": "^1.79.4",
+    "ssh2-sftp-client": "^11.0.0",
     "vite": "^5.4.8"
   }
 }
